test/io/sungeun/funcPtr3.good
funcPtr3.chpl:1: error: cannot capture overloaded function 'writeln'
